# DIVREYYOELtryaginuiforreplit

./: .gitignore  .replit  README.md  app.py  main.py  old_requirements.txt  parsed_text.json  pyproject.toml  requirements.txt  run_retrieval.py  step_1.py  step_2.py  step_3.py  step_4.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport--1736981196395.txt  Pasted--before-after-box-sizing-border-box-border-width-0-border-style-solid-bor-1737060572848.txt  Pasted--div-class-flex-justify-between-items-center-mt-7-div-class-flex-justify-end-w-full-1737061257432.txt
chassidic-ai/: run_retrieval.py
chassidic-ai/experimentation/: dicta_result.py
chassidic-ai/models/: models.py
chassidic-ai/processing/: processing.py
chassidic-ai/serving/: server.py
data/: dataset.csv  divrey_yoel_vayechi.csv  divrey_yoel_vayechi_enriched.csv  manifest.json
data/enriched/: divrey_yoel_beshalach.csv  divrey_yoel_beshalah.csv  divrey_yoel_bo.csv  divrey_yoel_shemot.csv  divrey_yoel_vaera.csv  kedushat_levi_vayechi.csv  other_vayechi.csv  tiferet_shlomo_vayechi.csv
data/preprocessing/: 1_docx_to_csv.py  1_html_to_csv.py  2_enrich_csv_with_translation_and_keywords.py  3_combine_enriched_csvs.py  4_csv_to_text.py  5_csv_to_mongo.py  6_create_embeddings.py  combine_csvs.py  (+3 more)
experimentation/: experiment_questions_spec.py
guider/: divrey_yoel_vayechi.txt  processed_output.txt  summary.txt
retrieval/: datasource.py  initial_relevance.py  other_texts_datasource.py  vector_datasource.py
static/: styles.css  ui.html
templates/: index.html
(+229 files in other folders)
